# agrosales

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py
backend/app/core/: config.py  enums.py  security.py
backend/app/database/: models.py  session.py
backend/app/migrations/: env.py
backend/app/scripts/: create_admin.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_categories_api.py  test_create_admin.py  test_customer_document_validator.py  test_customer_migration.py  test_customer_model.py  test_customer_schemas.py  test_customer_service.py  test_customers_api.py  test_database.py  test_fefo_reservation_service.py  test_health.py  test_inventory_movement_migration.py  test_inventory_movement_repository.py  test_inventory_movement_schemas.py  test_inventory_movement_schemas_read.py  test_inventory_movement_service.py  test_inventory_movements.py  test_inventory_movements_api.py  test_lot_migration.py  test_lot_repository.py  test_lot_repository_history.py  test_lot_service.py  test_lots.py  test_lots_api.py  test_migration.py  test_order_cancellation_api.py  test_order_cancellation_repository.py  test_order_cancellation_service.py  test_order_completion_api.py  test_order_completion_service.py  test_order_confirmation_api.py  test_order_confirmation_repositories.py  test_order_confirmation_service.py  test_order_migration.py  test_order_models.py  test_order_repository.py  test_order_reservation_migration.py  (+29 more)
(+157 files in other folders)
