[project]
name = "agrosales-api"
version = "0.1.0"
description = "API central do AgroSales"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116,<1.0",
    "uvicorn[standard]>=0.35,<1.0",
    "sqlalchemy[asyncio]>=2.0.41,<3.0",
    "asyncpg>=0.30,<1.0",
    "alembic>=1.16,<2.0",
    "pydantic-settings>=2.10,<3.0",
    "pyjwt>=2.10,<3.0",
    "pwdlib[argon2]>=0.2,<1.0",
    "email-validator>=2.2,<3.0",
    "python-multipart>=0.0.20,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.4,<9.0",
    "pytest-asyncio>=1.0,<2.0",
    "ruff>=0.12,<1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
